--- a/primecare-html/Dockerfile
+++ b/primecare-html/Dockerfile
@@ -10,22 +10,23 @@ LABEL Maintainer="Joseph Haddison" \
 
 # create a sam user with UID 1234 GID 1234
 # RUN addgroup -g 1000 devgroup && \
-#    adduser -m -u 1000 -g devgroup dev
+ARG VERSION=1.25
 
-# USER dev    
+# choose a light weight base image
+FROM nginx:${VERSION}-alpine-slim
 
 ENV WORK_DIR=/usr/share/nginx/html
 
 # working directory
 WORKDIR ${WORK_DIR}
 
-# copy all necessary web contents with a single command
-COPY . ${WORK_DIR}
+# copy all necessary web content with a single command
+COPY healet-html/ ${WORK_DIR}
 
-# expose static web site on a defined port
+# expose static web site on a specific port
 EXPOSE 80
 
 # Add a health check
-HEALTHCHECK --interval=30s --timeout=10s --start-period=5s --retries=3 CMD curl -f http://localhost/ || exit 1
+HEALTHCHECK --interval=30s --timeout=10s --start-period=5s --retries=3 CMD curl -f http://localhost/index.html || exit 1
 
 CMD ["nginx","-g","daemon off;"]
